--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
 										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Code</a></li>
-											<li><a href="generic.html" class="button">Download (.exe)</a></li>
+											<li><a href="#" class="button">Code</a></li>
+											<li><a href="#" class="button">Download (.exe)</a></li>
 										</ul>
 										
 									</div>
