--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Inga Sedova - Portfolio Page</title>
+		<title>Inga Sedova - Portfolio Page :)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -62,11 +62,12 @@
 										<header>
 											<h1><b>Ball The Breaker</b></h1>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>Ball The Breaker is a 2D block breaking game. 
+											<br>Every new game or level starts with randomly placed blocks.<br>
+											It is an infinite game where player can compete and set their personal best highscore.
+										</p>
 										<ul class="actions">
-											<li><a href="#" class="button">Code</a></li>
+											<li><a href="https://github.com/Sergeyvna/Unity/tree/main/Ball%20The%20Breaker" class="button">Code</a></li>
 											<li><a href="#" class="button">Download (.exe)</a></li>
 										</ul>
 										
