--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 										</p>
 										<ul class="actions">
 											<li><a href="https://github.com/Sergeyvna/Unity/tree/main/Ball%20The%20Breaker" class="button">Code</a></li>
-											<li><a href="#" class="button">Download (.exe)</a></li>
+											<li><a href="BallTheBreaker.zip" download class="button">Download (.exe)</a></li>
 										</ul>
 										
 									</div>
