--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 										</p>
 										<ul class="actions">
 											<li><a href="https://github.com/Sergeyvna/Unity/tree/main/Ball%20The%20Breaker" class="button">Code</a></li>
-											<li><a href="BallTheBreaker.zip" download class="button">Download (.exe)</a></li>
+											<li><a href="projects/BallTheBreaker.zip" download class="button">Download (.exe)</a></li>
 										</ul>
 										
 									</div>
 									<div>
-										<video width="420" height="300" controls>
-										<source src="movie.mp4" type="video/mp4">
+										<video width="480" height="380" controls>
+										<source src="/videos/ballVideo.mp4" type="video/mp4">
 										<source src="movie.ogg" type="video/ogg">
 										</video>
 									</div>
