--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									<div>
 										<video width="480" height="380" controls>
 										<source src="/videos/ballVideo.mp4" type="video/mp4">
-										<source src="movie.ogg" type="video/ogg">
+										<source src="/videos/ballVideo.ogg" type="video/ogg">
 										</video>
 									</div>
 								</div>
