--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
 										
 									</div>
 									<div>
-										<video width="480" height="380" controls>
-										<source src="/videos/ballVideo.mp4" type="video/mp4">
-										<source src="/videos/ballVideo.ogg" type="video/ogg">
-										</video>
+										<iframe width="420" height="345" 
+										src="https://www.youtube.com/embed/Sys-FjUzaMg">
+										</iframe>
 									</div>
 								</div>
 								<hr>
