--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 										</header>
 										<p>Ball The Breaker is a 2D block breaking game. 
 											<br>Every new game or level starts with randomly placed blocks.<br>
-											It is an infinite game where player can compete and set their personal best highscore.
+											It is an infinite game where players can set their personal best highscore.
 										</p>
 										<ul class="actions">
 											<li><a href="https://github.com/Sergeyvna/Unity/tree/main/Ball%20The%20Breaker" class="button">Code</a></li>
