--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
 										<header>
 											<h1><b>Reach The Light</b></h1>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>Reach the light is 2D platformer game. It is planned to be published on mobile platform with implemented ads.
+											At the moment this project is in progress.
+										</p>
+										<!--
 										<ul class="actions">
 											<li><a href="#" class="button">Code</a></li>
 											<li><a href="#" class="button">Download (.exe)</a></li>
 										</ul>
+										-->
 										
 									</div>
 									<div>
