--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 										<header>
 											<h1><b>Reach The Light</b></h1>
 										</header>
-										<p>Reach the light is 2D platformer game. It is planned to be published on mobile platform with implemented ads.
-											At the moment this project is in progress.
+										<p>Reach the light is 2D platformer game.<br> It is planned to be published on Android platforms with implemented ads.
+											<br>At the moment this project is in progress.
 										</p>
 										<!--
 										<ul class="actions">
