--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 										<header>
 											<h1><b>Reach The Light</b></h1>
 										</header>
-										<p>Reach the light is a 2D platformer game.<br>It is planned to be published on Android platforms with implemented ads.
+										<p>Reach the light is a 2D platformer game.<br>It is planned to be published on Android platforms.
 											<br>At the moment this project is in progress.
 										</p>
 										<!--
@@ -51,10 +51,9 @@
 										
 									</div>
 									<div>
-										<video width="420" height="300" controls>
-										<source src="#" type="video/mp4">
-										<source src="#" type="video/ogg">
-										</video>
+										<iframe width="420" height="345" 
+										src="https://www.youtube.com/embed/xHX-yfbdQag">
+										</iframe>
 									</div>
 								</div>
 							<hr>
