--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 										<p>Ball The Breaker is a 2D block breaking game. 
 											<br>Every new game or level starts with blocks that are randomly placed on the grid.<br>
 											It is an infinite game where players can set their personal best high score.
+											Game Engine: Unity<br>Platform: PC [Windows]
 										</p>
+										
 										<ul class="actions">
 											<li><a href="https://github.com/Sergeyvna/Unity/tree/main/Ball%20The%20Breaker" class="button">Code</a></li>
 											<li><a href="projects/BallTheBreaker.zip" download class="button">Download (.exe)</a></li>
