--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 											<h1><b>Reach The Light</b></h1>
 										</header>
 										<p>Reach the light is a 2D platformer game.<br>It is planned to be published on Android platforms.
-											<br>At the moment this project is in progress.
+											<br>At the moment this project is in development.
 										</p>
+										<p class="pfont">Game Engine: Unity<br>Platform: Mobile [Android]</p>
 										<!--
 										<ul class="actions">
 											<li><a href="#" class="button">Code</a></li>
@@ -65,10 +66,9 @@
 										</header>
 										<p>Ball The Breaker is a 2D block breaking game. 
 											<br>Every new game or level starts with blocks that are randomly placed on the grid.<br>
-											It is an infinite game where players can set their personal best high score.
-											Game Engine: Unity<br>Platform: PC [Windows]
+											It is an infinite game where players can set their personal best high score.	
 										</p>
-										
+										<p class="pfont">Game Engine: Unity<br>Platform: PC [Windows]</p>
 										<ul class="actions">
 											<li><a href="https://github.com/Sergeyvna/Unity/tree/main/Ball%20The%20Breaker" class="button">Code</a></li>
 											<li><a href="projects/BallTheBreaker.zip" download class="button">Download (.exe)</a></li>
