--- a/index.html
+++ b/index.html
@@ -39,16 +39,13 @@
 										<header>
 											<h1><b>Reach The Light</b></h1>
 										</header>
-										<p>Reach the light is a 2D platformer game.<br>It is planned to be published on Android platforms.
-											<br>At the moment this project is in development.
+										<p>Reach the light is a simple 2D platformer game focused on mobile devices.
 										</p>
 										<p class="pfont">Game Engine: Unity<br>Platform: Mobile [Android]</p>
-										<!--
 										<ul class="actions">
 											<li><a href="#" class="button">Code</a></li>
-											<li><a href="#" class="button">Download (.exe)</a></li>
+											<li><a href="https://play.google.com/store/apps/details?id=com.shrotDerevo.ReachTheLight" class="button">Download (.exe)</a></li>
 										</ul>
-										-->
 										
 									</div>
 									<div>
