--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 										<p class="pfont">Game Engine: Unity<br>Platform: Mobile [Android]</p>
 										<ul class="actions">
 											<li><a href="#" class="button">Code</a></li>
-											<li><a href="https://play.google.com/store/apps/details?id=com.shrotDerevo.ReachTheLight" class="button">Download (.exe)</a></li>
+											<li><a href="https://play.google.com/store/apps/details?id=com.shrotDerevo.ReachTheLight" class="button">Download</a></li>
 										</ul>
 										
 									</div>
