--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									</div>
 									<div>
 										<iframe width="420" height="345" 
-										src="https://www.youtube.com/watch?v=XFABahHWqDI&ab_channel=zilda">
+										src="https://www.youtube.com/embed/watch?v=XFABahHWqDI&ab_channel=zilda">
 										</iframe>
 									</div>
 								</div>
