--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									</div>
 									<div>
 										<iframe width="420" height="345" 
-										src="https://youtu.be/embed/XFABahHWqDI">
+										src="https://youtube.com/embed/XFABahHWqDI">
 										</iframe>
 									</div>
 								</div>
