--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 										<header>
 											<h1><b>Reach The Light</b></h1>
 										</header>
-										<p>Reach the light is a simple 2D platformer game focused on mobile devices.
+										<p>Reach the light is a simple 2D platformer game. <br> In this game I tried experimenting with tilemaps,  
+											universal render pipeline and cinemachine.
 										</p>
 										<p class="pfont">Game Engine: Unity<br>Platform: Mobile [Android]</p>
 										<ul class="actions">
