--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									</div>
 									<div>
 										<iframe width="420" height="345" 
-										src="https://www.youtube.com/watch?v=Sys-FjUzaMg&t=9s&ab_channel=sergeyvna">
+										src="https://youtube.com/embed/XFABahHWqDI">
 										</iframe>
 									</div>
 								</div>
