--- a/index.html
+++ b/index.html
@@ -38,6 +38,35 @@
 								<div class="spotlight">
 									<div class="content">
 										<header>
+											<h2>Final year project</h2>
+										</header>
+										<p>As a final year student I decided to develop a video game as my final year project. 
+											My main focus is to implement a feature that would allow players to select their prefered game input so that they could play just with one hand.
+											For my implementation I am using Unreal Engine 4 and blueprints.</p>
+										
+									</div>
+									<span><img src="images/gamepad.png" alt="" /></span>
+								</div>
+							<hr>
+
+
+							<div class="spotlight">
+								<div class="content">
+									<header>
+										<h2>C++ games</h2>
+									</header>
+									<p>Simple 2d games that I made while learning C++</p>
+									<ul class="actions">
+										<li><a href="https://github.com/Sergeyvna/cpp_games" class="button">Code [GitHub]</a></li>
+									</ul>
+									
+								</div>
+							</div>
+						<hr>
+
+								<div class="spotlight">
+									<div class="content">
+										<header>
 											<h2>Working at the kiosk</h2>
 										</header>
 										<p> 
