--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 											For my implementation I am using Unreal Engine 4 and blueprints.</p>
 										
 									</div>
-									<span><img src="images/gamepad.png" alt="" /></span>
+									<img src="images/gamepad.png" alt="" />
 								</div>
 							<hr>
 
