--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.png" alt="" /></span>
+						<span class="logo img"><img src="images/logo.png" alt="" /></span>
 						<h1>Inga Sedova - Game Developer</h1>
 						<p>I am a third year computer science student who enjoys developing video games and this is my porfolio website</p>
 					</header>
