--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo img"><img src="images/logo.png" alt="" /></span>
 						<h1>Inga Sedova - Game Developer</h1>
-						<p>I am a third year computer science student who enjoys developing video games and this is my porfolio website</p>
+						<p>I am a third year computer science student who enjoys developing video games and this is my portfolio website</p>
 					</header>
 
 				
